adição de formulario e tabela no site

--- a/index.html
+++ b/index.html
@@ -52,6 +52,45 @@
 
 </section>
 
+<section id="habilidades">
+    <h2>Habilidades e tecnologias</h2>
+
+    <table>
+
+        <thead>
+            <tr>
+                <th>Tecnologia</th>
+                <th>Nivel</th>
+                <th>Descrição</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>HTML</td>
+                <td>Iniciante</td>
+                <td>Capz de construir estruturas de páginas web semânticas e responsivas</td>
+            </tr>
+
+            <tr>
+                <td>CSS</td>
+                <td>Intermediario</td>
+                <td>Experiencias com flexbox, grid e animaçãoes CSS</td>
+            </tr>
+
+
+            <tr>
+                <td>Java Script</td>
+                <td>Básico</td>
+                <td>Desenvolvimento de scripts do lado do cliente para a interação.</td>
+            </tr>
+
+        </tbody>
+
+    </table>
+
+</section>
+
 <footer>
     
     <section id="Contato">
@@ -62,10 +101,44 @@
             E-mail: <a href="mailto:hiquemurara123@gmail.com">hiquemurara123@gmail.com</a>/
             Discord: hique12/
             Instagram: henrique_paiva06
+             <p>Direitos Reservados a Henrique Murara Paiva</p>
         </address>
 
-        <p>Direitos Reservados a Henrique Murara Paiva</p>
+       <p>Tem um projeto em mente? entre em contato</p>
 
+       <form action="">
+        <label for="Nome">Nome:  </label>
+        <input type="text" id="nome" name="nome" required> <br>
+
+        <label for="email">E-mail:  </label>
+        <input type="email" id="email" name="email" required> <br>
+
+        <label for="assunto">Assunto: </label>
+        <select name="assunto" id="assunto">
+            <option value="orcamento">Orçamento</option>
+            <option value="duvida">Duvida</option>
+            <option value="outro">Outro</option>
+        </select>
+
+        <br>
+
+        <label for="mensgem">Mensagem: </label> <br>
+        <textarea name="menssagem" id="mensagem" cols="40" rows="10" required></textarea> <br>
+
+        <input type="checkbox" id="inscricao" name="inscricao">
+        <label for="inscricao">Deseja receber minha newsletter? Fique por dentro.</label>
+
+        <br>
+
+        <input type="submit" value="enviar manesagens">  
+
+       </form>
+
+
+
+                    
     </section>
+
+
 </footer>
 </html>
