--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
 
         <tbody>
             <tr>
-                <td>HTML</td>
-                <td>Iniciante</td>
-                <td>Capz de construir estruturas de páginas web semânticas e responsivas</td>
+                <td>Minecraft</td>
+                <td>Bem experiente</td>
+                <td>Capz de construir estruturas enormes</td>
             </tr>
 
             <tr>
-                <td>CSS</td>
-                <td>Intermediario</td>
-                <td>Experiencias com flexbox, grid e animaçãoes CSS</td>
+                <td>Amizades</td>
+                <td>Noob</td>
+                <td>eu sou inseguro</td>
             </tr>
 
 
             <tr>
-                <td>Java Script</td>
+                <td>História</td>
                 <td>Básico</td>
-                <td>Desenvolvimento de scripts do lado do cliente para a interação.</td>
+                <td>História do brasil</td>
             </tr>
 
         </tbody>
