--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             </tr>
 
             <tr>
-                <td>Amizades</td>
-                <td>Noob</td>
-                <td>eu sou inseguro</td>
+                <td>Carro</td>
+                <td>Muito experiente</td>
+                <td>não dirijo, só coleciono</td>
             </tr>
 
 
