--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
     <section id="Sobre">
         <h2>Sobre mim</h2>
-        <img src="https://st4.depositphotos.com/20867096/41071/v/600/depositphotos_410715056-stock-video-silhouette-gamer-boy-playing-with.jpg"
-            alt="">
+        <img src="C:\Users\Usuario\Desktop\WhatsApp Image 2025-02-24 at 14.24.07.jpeg"alt="" width="250px" height="250px">
 
         <article>
             <p>Olá, eu sou o Henrique, mas podem me chamar de Paiva...nasci no dia 03/02/2006, eu sou apaixonado pela
@@ -134,11 +133,8 @@
 
        </form>
 
-
-
-                    
     </section>
 
-
 </footer>
+
 </html>
