--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section id="Sobre">
         <h2>Sobre mim</h2>
-        <img src="C:\Users\Usuario\Desktop\WhatsApp Image 2025-02-24 at 14.24.07.jpeg"alt="" width="250px" height="250px">
+        <img src="C:\Users\Usuario\Desktop\meu site\WhatsApp Image 2025-02-24 at 14.24.07.jpeg"alt="" width="250px" height="250px">
 
         <article>
             <p>Olá, eu sou o Henrique, mas podem me chamar de Paiva...nasci no dia 03/02/2006, eu sou apaixonado pela
