--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paiva</title>
+    
+
 </head>
 
 <body>
+    <div class="quadrado">
+
+    <div class="quadrado">
+
+    <div class="quadrado">
+
     <header>
-        <h1>Henrique M Paiva</h1>
+        <h1 style="color: black;">Henrique M Paiva</h1> 
         <nav>
             <ul>
                 <li><a href="#Sobre">Sobre mim</li>
@@ -21,7 +29,7 @@
     </header>
 
     <section id="Sobre">
-        <h2>Sobre mim</h2>
+        <h2 style="color: darkgreen;">Sobre mim</h2>
         <img src="WhatsApp Image 2025-02-24 at 14.24.07.jpg">
 
         <article>
@@ -30,7 +38,7 @@
         </article>
         <aside>
 
-            <h3>Habilidades</h3>
+            <h3 style="color: blue;">Habilidades</h3>
             <ul>
                 <li>Criativo</li>
                 <li>Eu sou bom em trabalhar em grupo</li>
@@ -42,39 +50,41 @@
 </body>
 
 <section id="Projetos">
-    <h2>Projetos</h2>
+    <h2 style="color: darkgreen;">Projetos</h2>
 
     <article>
-        <h3>Portifólios</h3>
+        <h3 style="color: blue;">Portifólios</h3>
         <p>Este foi o primeiro site que desenvolvi, baseando-se em um curso do SESI-SENAI</p>
     </article>
 
 </section>
 
 <section id="habilidades">
-    <h2>Habilidades e tecnologias</h2>
+    <h2 style="color: darkgreen;">Habilidades e tecnologias</h2>
 
     <table>
 
         <thead>
             <tr>
-                <th>Tecnologia</th>
-                <th>Nivel</th>
-                <th>Descrição</th>
+                <th style="color: saddlebrown;">Tecnologia</th>
+
+                <th style="color: saddlebrown;">Nivel</th>
+
+                <th style="color: saddlebrown;">Descrição</th>
             </tr>
         </thead>
 
         <tbody>
             <tr>
                 <td>Minecraft</td>
-                <td>Bem experiente</td>
-                <td>Capz de construir estruturas enormes</td>
+                <td>Avançado</td>
+                <td>Capaz de construir estruturas enormes</td>
             </tr>
 
             <tr>
                 <td>Carro</td>
-                <td>Muito experiente</td>
-                <td>não dirijo, só coleciono</td>
+                <td>Avançado</td>
+                <td>Não dirijo, só coleciono</td>
             </tr>
 
 
@@ -94,7 +104,7 @@
     
     <section id="Contato">
 
-        <h2>Contato</h2>
+        <h2 style="color: darkgreen;">Contato</h2>
 
         <address>
             E-mail: <a href="mailto:hiquemurara123@gmail.com">hiquemurara123@gmail.com</a>/
