--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paiva</title>
-    
+    <link rel="stylesheet" href="style.css">
+
 
 </head>
 
 <body>
     <div class="quadrado">
 
-    <div class="quadrado">
+    <div class="quadrado">s
 
     <div class="quadrado">
 
@@ -20,16 +21,16 @@
         <h1 style="color: black;">Henrique M Paiva</h1> 
         <nav>
             <ul>
-                <li><a href="#Sobre">Sobre mim</li>
-                <li><a href="#Projetos">Projetos</a></li>
-                <li><a href="#Contato">Contato</a></li>
-                <li><a href="https://google.com.br/" target="_blank">Google</a></li>
+                <a href="#Sobre">Sobre mim <br>
+                <a href="#Projetos">Projetos</a> <br>
+                <a href="#Contato">Contato</a> <br>
+                <a href="https://google.com.br/" target="_blank">Google</a> <br>
             </ul>
         </nav>
     </header>
 
     <section id="Sobre">
-        <h2 style="color: darkgreen;">Sobre mim</h2>
+        <h2>Sobre mim</h2>
         <img src="WhatsApp Image 2025-02-24 at 14.24.07.jpg">
 
         <article>
@@ -38,82 +39,31 @@
         </article>
         <aside>
 
-            <h3 style="color: blue;">Habilidades</h3>
+            <h3>Habilidades</h3>
             <ul>
-                <li>Criativo</li>
+                <li>Bom de volante no Euro Truck Simulator 2</li>
                 <li>Eu sou bom em trabalhar em grupo</li>
-                <li>Gosto de planejar e montar estruturas de lego</li>
+                <li>Gosto de planejar e depois montar em lego o que eu projetei</li>
             </ul>
         </aside>
 
     </section>
 </body>
 
-<section id="Projetos">
-    <h2 style="color: darkgreen;">Projetos</h2>
-
-    <article>
-        <h3 style="color: blue;">Portifólios</h3>
-        <p>Este foi o primeiro site que desenvolvi, baseando-se em um curso do SESI-SENAI</p>
-    </article>
-
-</section>
-
-<section id="habilidades">
-    <h2 style="color: darkgreen;">Habilidades e tecnologias</h2>
-
-    <table>
-
-        <thead>
-            <tr>
-                <th style="color: saddlebrown;">Tecnologia</th>
-
-                <th style="color: saddlebrown;">Nivel</th>
-
-                <th style="color: saddlebrown;">Descrição</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr>
-                <td>Minecraft</td>
-                <td>Avançado</td>
-                <td>Capaz de construir estruturas enormes</td>
-            </tr>
-
-            <tr>
-                <td>Carro</td>
-                <td>Avançado</td>
-                <td>Não dirijo, só coleciono</td>
-            </tr>
 
 
-            <tr>
-                <td>História</td>
-                <td>Básico</td>
-                <td>História do brasil</td>
-            </tr>
-
-        </tbody>
-
-    </table>
-
-</section>
-
-<footer>
     
     <section id="Contato">
 
-        <h2 style="color: darkgreen;">Contato</h2>
+        <h2>Contato</h2>
 
         <address>
             E-mail: <a href="mailto:hiquemurara123@gmail.com">hiquemurara123@gmail.com</a>/
             Discord: hique12/
             Instagram: henrique_paiva06
-             <p>Direitos Reservados a Henrique Murara Paiva</p>
         </address>
 
-       <p>Tem um projeto em mente? entre em contato</p>
+       <p>Entre em contato conosco</p>
 
        <form action="">
         <label for="Nome">Nome:  </label>
@@ -124,7 +74,7 @@
 
         <label for="assunto">Assunto: </label>
         <select name="assunto" id="assunto">
-            <option value="orcamento">Orçamento</option>
+            <option value="Amizade">Amizade</option>
             <option value="duvida">Duvida</option>
             <option value="outro">Outro</option>
         </select>
@@ -144,7 +94,11 @@
        </form>
 
     </section>
+    <body>
+        <footer>
+            <p>&COPY; Todos os Direitos Reservados</p>
+        </footer>
+    </body>
 
-</footer>
 
 </html>
