--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <nav>
             <ul>
                 <a href="#Sobre">Sobre mim <br>
-                <a href="#Projetos">Projetos</a> <br>
                 <a href="#Contato">Contato</a> <br>
                 <a href="https://google.com.br/" target="_blank">Google</a> <br>
             </ul>
@@ -38,12 +37,10 @@
                 matéria de História e tambem sou apaixonado pelo teatro.</p>
         </article>
         <aside>
-
-            <h3>Habilidades</h3>
             <ul>
                 <li>Bom de volante no Euro Truck Simulator 2</li>
-                <li>Eu sou bom em trabalhar em grupo</li>
-                <li>Gosto de planejar e depois montar em lego o que eu projetei</li>
+                <li>Meu gosto de musical é eclético</li>
+                <li>gosto filmes de comédia e ação</li>
             </ul>
         </aside>
 
